FIX: /api/certification/recent API - Pagaing, EntityGraph 같이 사용시 메모리 과부하 발생 따라서 코드 분리 필요